[gd_scene load_steps=30 format=1]

[ext_resource path="res://Scripts/InGameUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ProgressBars.png" type="Texture" id=2]
[ext_resource path="res://Sprites/YellowStar_empty.png" type="Texture" id=3]
[ext_resource path="res://Sprites/YellowStar.png" type="Texture" id=4]
[ext_resource path="res://Themes/GameTheme.tres" type="Theme" id=5]
[ext_resource path="res://Fonts/Griffy-Regular_32.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Scripts/LockCenterToAnchor.gd" type="Script" id=7]
[ext_resource path="res://Scripts/StartTimer.gd" type="Script" id=8]
[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=9]
[ext_resource path="res://Sprites/symbols_levelselection_settings_credits_exit_restart_back.png" type="Texture" id=10]
[ext_resource path="res://Scripts/ScoreBoard.gd" type="Script" id=11]
[ext_resource path="res://Sprites/CatSkull.png" type="Texture" id=12]
[ext_resource path="res://Objects/UI/SettingsMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/CheckPointsPanel.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]

resource/name = "UpdateScore"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerScore:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0.75, 0.75 ), Vector2( 1.25, 1.25 ), Vector2( 0.75, 0.75 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "UpdateScoreAndSequence"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerScore:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0.75, 0.75 ), Vector2( 1.25, 1.25 ), Vector2( 0.75, 0.75 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerBestSequence:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.25, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0.75, 0.75 ), Vector2( 1.25, 1.25 ), Vector2( 0.751, 0.75 ) ] }

[sub_resource type="Animation" id=3]

resource/name = "UpdateStartTimer"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("StartTimer:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.25, 0.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 4, 4 ), Vector2( 1, 1 ) ] }

[sub_resource type="AtlasTexture" id=4]

atlas = ExtResource( 2 )
region = Rect2( 0, 0, 264, 24 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=5]

atlas = ExtResource( 2 )
region = Rect2( 0, 24, 264, 24 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=6]

atlas = ExtResource( 2 )
region = Rect2( 0, 48, 264, 24 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=7]

atlas = ExtResource( 10 )
region = Rect2( 8, 4, 18, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=8]

atlas = ExtResource( 10 )
region = Rect2( 27, 4, 17, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=9]

atlas = ExtResource( 10 )
region = Rect2( 116, 4, 17, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=10]

atlas = ExtResource( 10 )
region = Rect2( 90, 4, 18, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=11]

atlas = ExtResource( 10 )
region = Rect2( 72, 4, 17, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=12]

atlas = ExtResource( 10 )
region = Rect2( 8, 4, 18, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=13]

atlas = ExtResource( 10 )
region = Rect2( 90, 4, 18, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=14]

atlas = ExtResource( 10 )
region = Rect2( 72, 4, 17, 17 )
margin = Rect2( 24, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=15]

atlas = ExtResource( 10 )
region = Rect2( 116, 4, 17, 17 )
margin = Rect2( 16, 0, 0, 0 )

[node name="GameUI" type="Container"]

process/pause_mode = 2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/UpdateScore = SubResource( 1 )
anims/UpdateScoreAndSequence = SubResource( 2 )
anims/UpdateStartTimer = SubResource( 3 )
next/UpdateScoreAndSequence = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="JumpReloadingBar" type="TextureProgress" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 152.0
margin/top = 66.0
margin/right = -112.0
margin/bottom = 42.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
texture/under = SubResource( 4 )
texture/over = SubResource( 5 )
texture/progress = SubResource( 6 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="StarBG" type="TextureFrame" parent="JumpReloadingBar"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 248.0
margin/top = -18.0
margin/right = -32.0
margin/bottom = -6.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="StarFG" type="TextureFrame" parent="JumpReloadingBar"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 248.0
margin/top = -18.0
margin/right = -32.0
margin/bottom = -6.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="NotEnoughEnergy" type="Label" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 112.0
margin/top = 42.0
margin/right = -74.0
margin/bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Not enough energy to jump!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayerScore" type="Label" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.75, 0.75 )
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 184.0
margin/top = 20.0
margin/right = -28.0
margin/bottom = 59.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Score: 0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 7 )

[node name="PlayerBestSequence" type="Label" parent="."]

rect/scale = Vector2( 0.751, 0.75 )
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
theme/theme = ExtResource( 5 )
margin/left = 20.0
margin/top = 20.0
margin/right = 252.0
margin/bottom = 59.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Best sequence: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 7 )

[node name="StartTimer" type="Label" parent="."]

process/pause_mode = 1
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 27.0
margin/top = 27.0
margin/right = -27.0
margin/bottom = -27.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 8 )

[node name="GameMenuPanel" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 205.0
margin/top = 250.0
margin/right = -205.0
margin/bottom = -170.0

[node name="GameMenu" type="VBoxContainer" parent="GameMenuPanel"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 58.0
margin/top = 40.0
margin/right = 52.0
margin/bottom = 60.0
custom_constants/separation = 24
alignment = 0
script/script = ExtResource( 9 )

[node name="Title" type="Label" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "Options"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LevelSelectionButton" type="Button" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 63.0
margin/right = 300.0
margin/bottom = 89.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Level Selection"
icon = SubResource( 7 )
flat = false

[node name="SettingsButton" type="Button" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 113.0
margin/right = 300.0
margin/bottom = 139.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Settings"
icon = SubResource( 8 )
flat = false

[node name="ResumeButton" type="Button" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 163.0
margin/right = 300.0
margin/bottom = 189.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Resume"
icon = SubResource( 9 )
flat = false

[node name="RestartButton" type="Button" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 213.0
margin/right = 300.0
margin/bottom = 239.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Restart"
icon = SubResource( 10 )
flat = false

[node name="QuitButton" type="Button" parent="GameMenuPanel/GameMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 263.0
margin/right = 300.0
margin/bottom = 289.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Quit"
icon = SubResource( 11 )
flat = false

[node name="ScoreBoard" type="VBoxContainer" parent="GameMenuPanel"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 58.0
margin/top = 40.0
margin/right = 52.0
margin/bottom = 41.0
custom_constants/separation = 16
alignment = 0
script/script = ExtResource( 11 )

[node name="ScoreBoardTitle" type="Label" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "Level Failed"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StarsContainer" type="HBoxContainer" parent="GameMenuPanel/ScoreBoard"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 55.0
margin/right = 300.0
margin/bottom = 103.0
custom_constants/separation = 0
alignment = 1

[node name="Skull" type="TextureFrame" parent="GameMenuPanel/ScoreBoard/StarsContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 126.0
margin/top = 0.0
margin/right = 174.0
margin/bottom = 48.0
texture = ExtResource( 12 )
stretch_mode = 0

[node name="StarA" type="TextureFrame" parent="GameMenuPanel/ScoreBoard/StarsContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 92.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="StarB" type="TextureFrame" parent="GameMenuPanel/ScoreBoard/StarsContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 116.0
margin/top = 0.0
margin/right = 164.0
margin/bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="StarC" type="TextureFrame" parent="GameMenuPanel/ScoreBoard/StarsContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 0.0
margin/right = 188.0
margin/bottom = 48.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="HBoxContainer1" type="HBoxContainer" parent="GameMenuPanel/ScoreBoard"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 119.0
margin/right = 300.0
margin/bottom = 137.0
custom_constants/separation = 32
alignment = 1

[node name="Score" type="Label" parent="GameMenuPanel/ScoreBoard/HBoxContainer1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 37.0
margin/top = 0.0
margin/right = 109.0
margin/bottom = 18.0
text = "Score: 258"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BestSequence" type="Label" parent="GameMenuPanel/ScoreBoard/HBoxContainer1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 141.0
margin/top = 0.0
margin/right = 263.0
margin/bottom = 18.0
text = "Best Sequence: 25"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hint" type="Label" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 153.0
margin/right = 300.0
margin/bottom = 171.0
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 1

[node name="LevelSelectionButton" type="Button" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 187.0
margin/right = 300.0
margin/bottom = 213.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Level Selection"
icon = SubResource( 12 )
flat = false

[node name="SettingsButton" type="Button" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 229.0
margin/right = 300.0
margin/bottom = 255.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Settings"
icon = SubResource( 8 )
flat = false

[node name="RestartButton" type="Button" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 271.0
margin/right = 300.0
margin/bottom = 297.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Restart"
icon = SubResource( 13 )
flat = false

[node name="QuitButton" type="Button" parent="GameMenuPanel/ScoreBoard"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 313.0
margin/right = 300.0
margin/bottom = 339.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Quit"
icon = SubResource( 14 )
flat = false

[node name="SettingsMenu" parent="GameMenuPanel" instance=ExtResource( 13 )]

margin/left = 147.0
margin/top = 40.0
margin/right = -153.0
margin/bottom = 371.0

[node name="NewRecordLabel" type="Label" parent="GameMenuPanel"]

visibility/visible = false
rect/rotation = -44.9999
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 343.0
margin/top = 1.0
margin/right = 437.0
margin/bottom = 21.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.03125, 0.03125, 0.03125, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "New Record!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckPointsPanel" type="Panel" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 244.0
margin/top = 250.0
margin/right = -248.0
margin/bottom = -70.0
script/script = ExtResource( 14 )

[node name="Label" type="Label" parent="CheckPointsPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 76.0
margin/top = 50.0
margin/right = 416.0
margin/bottom = 230.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="CheckPointsPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 136.0
margin/top = 250.0
margin/right = 352.0
margin/bottom = 276.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Got it !"
icon = SubResource( 15 )
flat = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[connection signal="pressed" from="GameMenuPanel/GameMenu/LevelSelectionButton" to="GameMenuPanel/GameMenu" method="_on_LevelSelectionButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/GameMenu/SettingsButton" to="GameMenuPanel/GameMenu" method="_on_SettingsButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/GameMenu/ResumeButton" to="GameMenuPanel/GameMenu" method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/GameMenu/RestartButton" to="GameMenuPanel/GameMenu" method="_on_RestartButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/GameMenu/QuitButton" to="GameMenuPanel/GameMenu" method="_on_QuitButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/ScoreBoard/LevelSelectionButton" to="GameMenuPanel/ScoreBoard" method="_on_LevelSelectionButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/ScoreBoard/SettingsButton" to="GameMenuPanel/ScoreBoard" method="_on_SettingsButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/ScoreBoard/RestartButton" to="GameMenuPanel/ScoreBoard" method="_on_RestartButton_pressed"]

[connection signal="pressed" from="GameMenuPanel/ScoreBoard/QuitButton" to="GameMenuPanel/ScoreBoard" method="_on_QuitButton_pressed"]

[connection signal="pressed" from="CheckPointsPanel/Button" to="CheckPointsPanel" method="_on_Button_pressed"]


